# rag-pipeline-txt

./: .gitignore  pyproject.toml
src/rag_pipeline/: 1_ingest.py  2_retrieve.py  3_answer_genration.py  4_history_aware_generation.py
